kubernetes/platform/databases/couchdb/ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: couchdb
  namespace: traefik
spec:
  routes:
    - match: Host(`couch.axis.scottmckendry.tech`)
      kind: Rule
      middlewares:
        - name: ipallowlist
          namespace: traefik
      services:
        - name: couchdb
          namespace: databases
          port: 5984
  tls:
    secretName: axis-tls
